Added workspace figures, more text on topology

--- a/Kinematics.ipynb
+++ b/Kinematics.ipynb
@@ -232,8 +232,7 @@
     "\n",
     "As an example, for a 4-bar linkage in 2D, there are $n=4$ links and\n",
     "$m=4$ joints each with mobility 1. If one link is frozen to the\n",
-    "environment, this could be considered a fifth fixed joint with mobility\n",
-    "0. Hence, the mobility is:\n",
+    "environment, this could be considered a fifth fixed joint with mobility 0. Hence, the mobility is:\n",
     "$$M = 3 \\cdot 4 - 4 \\cdot (3-1) - (3-0) = 12 - 8 - 3 = 1$$ which\n",
     "indicates the entire structure has only a single degree of freedom. (We\n",
     "shall see in later lectures that it is not trivial to parameterize this\n",
@@ -282,7 +281,13 @@
     "\n",
     "### Examples\n",
     "\n",
-    "(TODO: add examples. see slides for now)"
+    "****************\n",
+    "\n",
+    "![fig:2RWorkspace](figures/modeling/2R_workspace.svg)\n",
+    "\n",
+    "<div class=\"figcaption\"><a href=\"fig:2RWorkspace\">Figure 1</a>. A 2R manipulator, with joint limits and a second link somewhat shorter than the first has a reachable (position) workspace that is a portion of an annulus (planar donut shape).</div>\n",
+    "\n",
+    "****************"
    ]
   },
   {
@@ -318,19 +323,12 @@
     "\n",
     "#### Deriving the general-purpose formula\n",
     "\n",
-    "When the first joint rotates by angle $q_1$, the frame of the first link\n",
-    "$T_1(q_1)$ is changed. $T_1(q_1)$ can be derived by observing how a\n",
-    "point $X$ attached to $l_i$ would be moved. Let $\\V{x}_1$ be the\n",
-    "coordinates of this point relative to the link's frame (augmented with a\n",
-    "1, in homogeneous coordinates).\n",
+    "When the first joint rotates by angle $q_1$, the frame of the first link $T_1(q_1)$ is changed. $T_1(q_1)$ can be derived by observing how a point $X$ attached to $l_i$ would be moved. Let $\\V{x}_1$ be the coordinates of this point relative to the link's frame (augmented with a 1, in homogeneous coordinates).\n",
     "\n",
-    "First, observe that relative to $l_1$'s reference frame, $X$ has\n",
-    "coordinates $R(q_1)\\V{x}_1$ because the link was rotated about the\n",
-    "origin:\n",
-    "$$\\V{x}_1^{ref} = R(q_1) \\V{x}_1 = \\begin{bmatrix}\n",
-    "\\cos q_1 & -\\sin q_1 & 0 \\\\\n",
-    "\\sin q_1 & \\cos q_1 & 0 \\\\\n",
-    "0 & 0 & 1 \\end{bmatrix}.$$\n",
+    "First, observe that relative to $l_1$'s reference frame, $X$ has coordinates $R(q_1)\\V{x}_1$ because the link was rotated about the origin:\n",
+    "$$\\V{x}_1^{ref} = R(q_{1}) \\V{x}_{1} = \\begin{bmatrix} {\\cos q_1} & {-\\sin q_1} & {0} \\\\ {\\sin q_1} & {\\cos q_1} & {0} \\\\ 0 & 0 & 1 \n",
+    "\\end{bmatrix}.$$\n",
+    "\n",
     "Next, we can convert coordinates in $l_1$'s\n",
     "reference frame to the world via multiplication by $T_1^{ref}$ to obtain\n",
     "the final value of $X$'s world coordinates, $\\V{x}_W$:\n",
@@ -854,13 +852,33 @@
     "Several software libraries, such as Klamp't and Orocos KDL, will compute\n",
     "forward kinematics for any robot specified in URDF format. As an example\n",
     "in Klamp't, the following code prints the end effector position of the\n",
-    "2R robot given above at the configuration $(\\pi/4,\\pi/4)$:\n",
-    "\n",
-    "```python\n",
+    "2R robot given above at the configuration $(\\pi/4,\\pi/4)$:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Invalid robot index",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-a5a791bd24b1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mworld\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mWorldModel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mworld\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadFile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"data/planar2R.urdf\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mrobot\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mworld\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrobot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;31m#modifies the current configuration of the robot\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mrobot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msetConfig\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpi\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpi\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Python27\\lib\\site-packages\\klampt\\robotsim.pyc\u001b[0m in \u001b[0;36mrobot\u001b[1;34m(self, *args)\u001b[0m\n\u001b[0;32m   2742\u001b[0m         \u001b[0mrobot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mWorldModel\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mchar\u001b[0m \u001b[0mconst\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;33m>\u001b[0m \u001b[0mRobotModel\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2743\u001b[0m         \"\"\"\n\u001b[1;32m-> 2744\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0m_robotsim\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mWorldModel_robot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2745\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2746\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mrobotLink\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Invalid robot index"
+     ]
+    }
+   ],
+   "source": [
+    "#Code for doing basic forward kinematics with Klamp't\n",
     "from klampt import *\n",
     "import math\n",
     "world = WorldModel()\n",
-    "world.readFile(\"planar_2R.urdf\")\n",
+    "world.readFile(\"data/planar2R.urdf\")\n",
     "robot = world.robot(0)\n",
     "#modifies the current configuration of the robot\n",
     "robot.setConfig([0,math.pi/4,math.pi/4,0])\n",
@@ -870,10 +888,14 @@
     "#getTransform() returns a pair (R,t) giving the rotation and translation of the\n",
     "#end effector frame, so the R,t = ... syntax extracts the translation only\n",
     "#R,t = robot.link(\"end_effector\").getTransform()\n",
-    "#print t\n",
-    "```\n",
-    "\n",
-    "Note that the configuration provided in line 7 must take into account\n",
+    "#print t"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that Klamp't numbers the links as they are listed in the URDF file, and assigns a configuration degree-of-freedom to each link.  Hence, the configuration provided in line 7 must take into account\n",
     "the base link and the dummy end effector frame."
    ]
   },
@@ -967,13 +989,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49a2cf488ff745fcb83cc1d3390483c5",
+       "model_id": "e47749e64ded4b88be7bd66de5b04b52",
        "version_major": 2,
        "version_minor": 0
       },
@@ -987,7 +1013,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e40a0acc0e7247f0b7147b8a33e0c68c",
+       "model_id": "0bafe4968a8d44868f10f1bd52c4a8cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1000,6 +1026,7 @@
     }
    ],
    "source": [
+    "#Code for the interactive example (run me!)\n",
     "import time\n",
     "from klampt import *\n",
     "from klampt.math import so3,vectorops\n",
@@ -1038,11 +1065,88 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### RP manipulator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2ebf5df52b1d43f880eeb501996b4442",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "S2xhbXB0V2lkZ2V0KGNhbWVyYT17dSdmYXInOiAxMDAwLCB1J3Bvc2l0aW9uJzoge3UneSc6IDYuNzAyNTYzNDQ0MTQ5MzY3LCB1J3gnOiAwLjI3MDU3NjMxMzUzMzA1ODQ0LCB1J3onOiAtMC7igKY=\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f4afc8e2ba464446bf371e8dcda67228",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VkJveChjaGlsZHJlbj0oRmxvYXRTbGlkZXIodmFsdWU9MC4wLCBkZXNjcmlwdGlvbj11J0xpbmsgMCcsIG1heD02LjI4MzE5LCBzdGVwPTAuMDAxKSwgRmxvYXRTbGlkZXIodmFsdWU9MS4wLCDigKY=\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Code for the interactive example (run me!)\n",
+    "import time\n",
+    "from klampt import *\n",
+    "from klampt.math import so3,vectorops\n",
+    "import math\n",
+    "from IPython.display import HTML,clear_output\n",
+    "import ipywidgets as widgets\n",
+    "import ipyklampt\n",
+    "\n",
+    "world = WorldModel()\n",
+    "world.readFile(\"data/planarRP.rob\")\n",
+    "robot = world.robot(0)\n",
+    "ee_local = (1,0,0)  #end effector coordinates\n",
+    "robot.link(0).appearance().setColor(0.4,0.4,0.4)\n",
+    "robot.link(1).appearance().setColor(0.2,0.2,0.2)\n",
+    "kvis = ipyklampt.KlamptWidget(world,width=400,height=400)\n",
+    "#look down\n",
+    "kvis.set_camera({u'near': 0.1, u'target': {u'y': 0, u'x': 0, u'z': 0}, u'far': 1000, u'position': {u'y': 6.702563444149367, u'x': 0.27057631353305844, u'z': -0.049312632332197764}, u'up': {u'y': 0.44113772676914204, u'x': -0.003726563135538217, u'z': -0.897431679153433}})\n",
+    "\n",
+    "#called whenever configuration is edited\n",
+    "def config_update_cb(index,value):\n",
+    "    kvis.begin_rpc()\n",
+    "    for i in range(robot.numLinks()):\n",
+    "        Ti = robot.link(i).getTransform()\n",
+    "        kvis.add_xform(\"xform\"+str(i),length=0.5,width=2.0)\n",
+    "        kvis.set_transform(\"xform\"+str(i),R=Ti[0],t=vectorops.add(Ti[1],[0,0,0.1]))\n",
+    "    x,y,z = robot.link(robot.numLinks()-1).getWorldPosition(ee_local)\n",
+    "    kvis.add_sphere(\"ee_position\",x,y,z,0.05)\n",
+    "    kvis.add_text(\"wcoords\",text=\"World coords: %f %f %f\"%(x,y,z),x=1,y=1)\n",
+    "    kvis.end_rpc()\n",
+    "config_widget = ipyklampt.EditConfig(world.robot(0),kvis,link_selector='all',callback=config_update_cb)\n",
+    "\n",
+    "x,y,z = robot.link(1).getWorldPosition(ee_local)\n",
+    "\n",
+    "display(kvis)\n",
+    "display(config_widget)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1097,7 +1201,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "307.2px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   },
