--- a/Kinematics.ipynb
+++ b/Kinematics.ipynb
@@ -371,7 +371,7 @@
     "equation holds for $i > 1$:\n",
     "$$T_{i}(q_1,\\ldots,q_i) = T_{i-1}(q_1,\\ldots,q_{i-1}) (T_{i-1}^{ref})^{-1} T_i^{ref} R(q_i).$$\n",
     "This can be simplified further by assuming the reference *parent\n",
-    "transforms* are given\n",
+    "transforms* are given by the relative transforms\n",
     "$T_{i\\rightarrow i-1}^{ref} \\equiv (T_{i-1}^{ref})^{-1} T_i^{ref}$. The\n",
     "simplified equation is:\n",
     "$$T_{i}(q) = T_{i-1}(q) T_{i\\rightarrow i-1}^{ref} R(q_i).\n",
@@ -437,6 +437,18 @@
     "of the end effector point, we simply apply this transform to the point\n",
     "$(L_2, 0, 1)$ to obtain:\n",
     "$$T_2(q_1,q_2) \\begin{bmatrix}L_2 \\\\ 0 \\\\ 1 \\end{bmatrix} = \\begin{bmatrix} L_0 + c_1 L_1 + c_{12} L_2 \\\\ s_1 L_1 + s_{12}L_2 \\\\ 1 \\end{bmatrix}$$\n",
+    "\n",
+    "This notation is shown below in [Fig. 2](#fig:planar2RNotation)\n",
+    "\n",
+    "*************\n",
+    "\n",
+    "![fig:planar2RNotation](figures/modeling/planar_2R.svg)\n",
+    "\n",
+    "<div class=\"figcaption\"> <a name=\"fig:planar2RNotation\">Figure 2</a>.\n",
+    "    Standard notation for a 2R manipulator.\n",
+    "</div>\n",
+    "\n",
+    "*************\n",
     "\n",
     "More generally, if we are given an $n$ link robot and define\n",
     "$c_{1,...,k} = \\cos(\\sum_{i=1}^k q_i)$ and\n",
@@ -560,13 +572,13 @@
     "$z$ axis, the second about the $y$ axis, and the prismatic joint\n",
     "translates about the $x$ axis. All reference frames are aligned with the\n",
     "world frame (that is, $L_1=0$ in\n",
-    "[Fig. 1](#fig:2RPManipulator)).\n",
+    "[Fig. 3](#fig:2RPManipulator)).\n",
     "\n",
     "******************\n",
     "\n",
     "![fig:2RPManipulator](figures/modeling/2RP.png)\n",
     "\n",
-    "<div class=\"figcaption\"><a name=\"fig:2RPManipulator\">Figure 1</a>\n",
+    "<div class=\"figcaption\"><a name=\"fig:2RPManipulator\">Figure 3</a>\n",
     "A spherical manipulator. Without loss of generality, we can consider\n",
     "the \"shoulder\" to be the world origin ($L_1=0$), and the third\n",
     "configuration variable $q_3$ to be the distance of the end effector to\n",
@@ -707,7 +719,7 @@
     "\n",
     "<a name=\"alg:ForwardKinematics\">Algorithm 1</a>. **Forward kinematics**\n",
     "\n",
-    "1. $T_W(q) \\rightarrow I$.\n",
+    "1. $T_W(q) \\gets I$.\n",
     "\n",
     "2. **For** $i=1,\\ldots,N$ in topologically sorted order:\n",
     "\n",
@@ -857,19 +869,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "Invalid robot index",
+     "ename": "AssertionError",
+     "evalue": "There was an error loading data/planar2R.urdf",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-14-a5a791bd24b1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mworld\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mWorldModel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mworld\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadFile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"data/planar2R.urdf\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mrobot\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mworld\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrobot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;31m#modifies the current configuration of the robot\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mrobot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msetConfig\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpi\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpi\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Python27\\lib\\site-packages\\klampt\\robotsim.pyc\u001b[0m in \u001b[0;36mrobot\u001b[1;34m(self, *args)\u001b[0m\n\u001b[0;32m   2742\u001b[0m         \u001b[0mrobot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mWorldModel\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mchar\u001b[0m \u001b[0mconst\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;33m>\u001b[0m \u001b[0mRobotModel\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2743\u001b[0m         \"\"\"\n\u001b[1;32m-> 2744\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0m_robotsim\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mWorldModel_robot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2745\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2746\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mrobotLink\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: Invalid robot index"
+      "\u001b[1;31mAssertionError\u001b[0mTraceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-eb3260e78369>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mworld\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mWorldModel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mres\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mworld\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadFile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"data/planar2R.urdf\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mres\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"There was an error loading data/planar2R.urdf\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mrobot\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mworld\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrobot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;31m#modifies the current configuration of the robot\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAssertionError\u001b[0m: There was an error loading data/planar2R.urdf"
      ]
     }
    ],
@@ -878,7 +889,8 @@
     "from klampt import *\n",
     "import math\n",
     "world = WorldModel()\n",
-    "world.readFile(\"data/planar2R.urdf\")\n",
+    "res = world.readFile(\"data/planar2R.urdf\")\n",
+    "assert res, \"There was an error loading data/planar2R.urdf\"\n",
     "robot = world.robot(0)\n",
     "#modifies the current configuration of the robot\n",
     "robot.setConfig([0,math.pi/4,math.pi/4,0])\n",
@@ -895,8 +907,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that Klamp't numbers the links as they are listed in the URDF file, and assigns a configuration degree-of-freedom to each link.  Hence, the configuration provided in line 7 must take into account\n",
-    "the base link and the dummy end effector frame."
+    "Note that Klamp't numbers the links as they are listed in the URDF file, and assigns a configuration degree-of-freedom to each link.  Hence, the 4-element configuration provided in line 7 addresses the links base_link, link_1, link_2, and the dummy end_effector frame."
    ]
   },
   {
@@ -982,14 +993,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2R manipulator\n",
+    "### 2R Planar Robot\n",
     "\n",
     "This example lets you manipulate the configuration of a simple 2R robot to observe how the frames of its links change as joint values change.  The coordinates of the end effector point (1,0,0) are also updated."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "code_folding": [
      0
@@ -999,7 +1010,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e47749e64ded4b88be7bd66de5b04b52",
+       "model_id": "c388262e09724885aef4a387d5fb4513",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1013,7 +1024,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0bafe4968a8d44868f10f1bd52c4a8cd",
+       "model_id": "8622235d722248acb498bae44b7d427d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1068,12 +1079,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### RP manipulator"
+    "### RP Planar Robot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "code_folding": [
      0
@@ -1083,7 +1094,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ebf5df52b1d43f880eeb501996b4442",
+       "model_id": "6fde524880be4ee4ab4a4108a4073674",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1097,7 +1108,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4afc8e2ba464446bf371e8dcda67228",
+       "model_id": "fc2f88348db64d39b20700a6dd516d8f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1136,6 +1147,88 @@
     "        Ti = robot.link(i).getTransform()\n",
     "        kvis.add_xform(\"xform\"+str(i),length=0.5,width=2.0)\n",
     "        kvis.set_transform(\"xform\"+str(i),R=Ti[0],t=vectorops.add(Ti[1],[0,0,0.1]))\n",
+    "    x,y,z = robot.link(robot.numLinks()-1).getWorldPosition(ee_local)\n",
+    "    kvis.add_sphere(\"ee_position\",x,y,z,0.05)\n",
+    "    kvis.add_text(\"wcoords\",text=\"World coords: %f %f %f\"%(x,y,z),x=1,y=1)\n",
+    "    kvis.end_rpc()\n",
+    "config_widget = ipyklampt.EditConfig(world.robot(0),kvis,link_selector='all',callback=config_update_cb)\n",
+    "\n",
+    "x,y,z = robot.link(1).getWorldPosition(ee_local)\n",
+    "\n",
+    "display(kvis)\n",
+    "display(config_widget)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6DOF Industrial Manipulator "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d00c7bb5a74d4bc6b045ccfca76638ef",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "S2xhbXB0V2lkZ2V0KGhlaWdodD00MDAsIHNjZW5lPXt1J29iamVjdCc6IHt1J21hdHJpeCc6IFsxLCAwLCAwLCAwLCAwLCAwLCAtMSwgMCwgMCwgMSwgMCwgMCwgMCwgMCwgMCwgMV0sIHUndXXigKY=\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ec4ea16390fd42a882062c0d47eb41c9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VkJveChjaGlsZHJlbj0oRmxvYXRTbGlkZXIodmFsdWU9MC4wLCBkZXNjcmlwdGlvbj11J0xpbmsgMScsIG1heD0zLjEyNDEzOTM2MTA2OTg1LCBtaW49LTMuMTI0MTM5MzYxMDY5ODUsIHN0ZXDigKY=\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Code for the interactive example (run me!)\n",
+    "import time\n",
+    "from klampt import *\n",
+    "from klampt.math import so3,vectorops\n",
+    "import math\n",
+    "from IPython.display import HTML,clear_output\n",
+    "import ipywidgets as widgets\n",
+    "import ipyklampt\n",
+    "\n",
+    "world = WorldModel()\n",
+    "world.readFile(\"data/tx90l.rob\")\n",
+    "robot = world.robot(0)\n",
+    "ee_local = (0,0,0)  #end effector coordinates\n",
+    "robot.link(0).appearance().setColor(0.4,0.4,0.4)\n",
+    "robot.link(1).appearance().setColor(0.2,0.2,0.2)\n",
+    "kvis = ipyklampt.KlamptWidget(world,width=400,height=400)\n",
+    "\n",
+    "#called whenever configuration is edited\n",
+    "def config_update_cb(index,value):\n",
+    "    kvis.begin_rpc()\n",
+    "    for i in range(robot.numLinks()):\n",
+    "        Ti = robot.link(i).getTransform()\n",
+    "        kvis.add_xform(\"xform\"+str(i),length=0.5,width=2.0)\n",
+    "        kvis.set_transform(\"xform\"+str(i),R=Ti[0],t=Ti[1])\n",
     "    x,y,z = robot.link(robot.numLinks()-1).getWorldPosition(ee_local)\n",
     "    kvis.add_sphere(\"ee_position\",x,y,z,0.05)\n",
     "    kvis.add_text(\"wcoords\",text=\"World coords: %f %f %f\"%(x,y,z),x=1,y=1)\n",
