Consistent section capitalization

--- a/Kinematics.ipynb
+++ b/Kinematics.ipynb
@@ -34,7 +34,7 @@
     "the geometric calculations needed to map configuration space to\n",
     "workspace.\n",
     "\n",
-    "Configuration Space and Workspace\n",
+    "Configuration space and workspace\n",
     "---------------------------------\n",
     "\n",
     "A robot's kinematic structure is described by a set of *links*, which\n",
@@ -63,7 +63,7 @@
     "*maximal coordinates*), but the constraints imposed by each joint might\n",
     "not be satisfied by a given maximal coordinate representation.\n",
     "\n",
-    "### Defining Robot Structures\n",
+    "### Defining robot structures\n",
     "\n",
     "A wide variety of robot mechanisms can be described by categorizing\n",
     "their arrangement of joints and joint types. For the moment we will\n",
@@ -132,7 +132,7 @@
     "-   Mobile base: the workspace is 3D, but a base link can rotate and\n",
     "    translate on a 2D plane, like in a car.\n",
     "\n",
-    "### Configurations and Configuration Space\n",
+    "### Configurations and configuration space\n",
     "\n",
     "As mentioned above, the configuration of a robot is a minimal set of\n",
     "coordinates defining the position of all links. For serial or branched\n",
@@ -238,7 +238,7 @@
     "shall see in later lectures that it is not trivial to parameterize this\n",
     "degree of freedom).\n",
     "\n",
-    "### End Effectors and Reachable Workspaces\n",
+    "### End effectors and reachable workspaces\n",
     "\n",
     "\"Workspace\" is somewhat of an overloaded term in robotics; it is also\n",
     "used to refer to the range of positions and orientations of a certain\n",
@@ -294,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Forward Kinematics\n",
+    "Forward kinematics\n",
     "------------------\n",
     "\n",
     "Forward kinematics is the process of calculating the frames of a robot's\n",
@@ -307,7 +307,7 @@
     "We shall only describe forward kinematics for serial and articulated\n",
     "robots; methods for parallel robots will be covered in the next chapter.\n",
     "\n",
-    "### 2D Forward Kinematics for a Serial Robot\n",
+    "### 2D forward kinematics for a serial robot\n",
     "\n",
     "First, let us derive the forward kinematics for an $n$R serial robot.\n",
     "There are $n$ links $l_1,\\ldots,l_n$, with the 1st link attached to the\n",
@@ -456,7 +456,7 @@
     "the end effector point given by:\n",
     "$$T_n(\\V{q})\\begin{bmatrix}L_n \\\\ 0 \\\\ 1 \\end{bmatrix} = \\begin{bmatrix}L_0 \\\\ 0 \\\\ 1 \\end{bmatrix} + \\sum_{i=1}^n \\begin{bmatrix}L_i c_{1,\\ldots,i} \\\\ L_i s_{1,\\ldots,i} \\\\ 0 \\end{bmatrix}.$$\n",
     "\n",
-    "### 2D Forward Kinematics for Branched Revolute Robots\n",
+    "### 2D forward kinematics for branched revolute robots\n",
     "\n",
     "Branched robots can be handled by a similar formula, except additional\n",
     "bookkeeping is necessary to represent the robot's structure. We order\n",
@@ -473,7 +473,7 @@
     "$$T_{i}(q) = T_{i}^{ref} R(q_i)\n",
     "\\label{eq:RecursiveForwardKinematicsBase}$$ otherwise.\n",
     "\n",
-    "### Handling 2D Prismatic Joints\n",
+    "### Handling 2D prismatic joints\n",
     "\n",
     "To handle prismatic joints in 2D, we must modify the forward kinematics\n",
     "to replace the rotations $R(q_i)$ with a translation that depend on\n",
@@ -538,7 +538,7 @@
     "0 & 0 & 1\n",
     "\\end{bmatrix}.$$\n",
     "\n",
-    "### 3D Forward Kinematics\n",
+    "### 3D forward kinematics\n",
     "\n",
     "In 3D, forward kinematics is essentially identical to\n",
     "($\\ref{eq:RecursiveForwardKinematicsGeneralized}$), except that\n",
@@ -650,7 +650,7 @@
     "reference transform $T_2^{ref}$ rotates $\\pi$ radians about either the\n",
     "$x$ or $z$ axis.\n",
     "\n",
-    "### Kinematics Conventions\n",
+    "### Kinematics conventions\n",
     "\n",
     "As we defined the layout of a robot's kinematic structure above, we\n",
     "store the following parameters for each link $i=1,\\ldots,n$: parents\n",
@@ -700,7 +700,7 @@
     "popular for robot structure optimization problems, like in robot\n",
     "calibration.\n",
     "\n",
-    "### A Single-Pass Forward Kinematics Algorithm\n",
+    "### A single-pass forward kinematics algorithm\n",
     "\n",
     "Forward kinematics can be computed through a single pass through the\n",
     "links, and for typical robots (at most hundreds of links), this process\n",
@@ -723,19 +723,19 @@
     "\n",
     "2. **For** $i=1,\\ldots,N$ in topologically sorted order:\n",
     "\n",
-    "   1. Use ($\\ref{eq:RecursiveForwardKinematicsGeneralized}$) to calculate\n",
+    "3. &nbsp;&nbsp;&nbsp;Use ($\\ref{eq:RecursiveForwardKinematicsGeneralized}$) to calculate\n",
     "$T_i(q)$ using the stored value of $T_{p[i]}(q)$.\n",
     "\n",
-    "   2. Store $T_i(q)$.\n",
+    "4.  &nbsp;&nbsp;&nbsp;Store $T_i(q)$.\n",
     "\n",
-    "3. **Return** $T_1,\\ldots,T_N$\n",
+    "5. **Return** $T_1,\\ldots,T_N$\n",
     "\n",
     "*************\n",
     "\n",
     "After the algorithm is complete, all link frames $T_1,\\ldots,T_N$ are calculated with\n",
     "respect to the world frame.\n",
     "\n",
-    "### Robot Kinematic Definition Files\n",
+    "### Robot kinematic definition files\n",
     "\n",
     "Although deriving a closed-form symbolic expression for forward\n",
     "kinematics is helpful for some purposes, it is often more convenient and\n",
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +879,7 @@
      "traceback": [
       "\u001b[1;31m\u001b[0m",
       "\u001b[1;31mAssertionError\u001b[0mTraceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-eb3260e78369>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mworld\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mWorldModel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mres\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mworld\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadFile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"data/planar2R.urdf\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mres\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"There was an error loading data/planar2R.urdf\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mrobot\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mworld\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrobot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;31m#modifies the current configuration of the robot\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-6-eb3260e78369>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mworld\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mWorldModel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mres\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mworld\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadFile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"data/planar2R.urdf\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mres\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"There was an error loading data/planar2R.urdf\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mrobot\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mworld\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrobot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;31m#modifies the current configuration of the robot\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mAssertionError\u001b[0m: There was an error loading data/planar2R.urdf"
      ]
     }
@@ -993,14 +993,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2R Planar Robot\n",
+    "### 2R planar robot\n",
     "\n",
     "This example lets you manipulate the configuration of a simple 2R robot to observe how the frames of its links change as joint values change.  The coordinates of the end effector point (1,0,0) are also updated."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "code_folding": [
      0
@@ -1010,7 +1010,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c388262e09724885aef4a387d5fb4513",
+       "model_id": "0e24105bf956459c8108d1feb7518d88",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1024,7 +1024,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8622235d722248acb498bae44b7d427d",
+       "model_id": "313c425b2fe048f2a0b5b0b3dc864959",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1079,12 +1079,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### RP Planar Robot"
+    "### RP planar robot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "code_folding": [
      0
@@ -1094,7 +1094,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6fde524880be4ee4ab4a4108a4073674",
+       "model_id": "9d87d54c4fb24764999e90c89c86d39f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1108,7 +1108,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc2f88348db64d39b20700a6dd516d8f",
+       "model_id": "6f9cb08d26b2449c8adb2f5ce844b231",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1163,12 +1163,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6DOF Industrial Manipulator "
+    "### 6DOF industrial manipulator "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "code_folding": [
      0
@@ -1178,7 +1178,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d00c7bb5a74d4bc6b045ccfca76638ef",
+       "model_id": "afa09d3946de455188bfea471e80c8b1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1192,7 +1192,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec4ea16390fd42a882062c0d47eb41c9",
+       "model_id": "e196aae7f792490eb5cda078af365b15",
        "version_major": 2,
        "version_minor": 0
       },
