Consistent section capitalization

--- a/RobotControl.ipynb
+++ b/RobotControl.ipynb
@@ -46,7 +46,7 @@
     "familiar interface that will help the application designer work with\n",
     "higher-level primitive operations.\n",
     "\n",
-    "Who Controls What? The Motor Controller\n",
+    "Who controls what? The motor controller\n",
     "---------------------------------------\n",
     "\n",
     "*************\n",
@@ -113,7 +113,7 @@
     "rest of this chapter will describe how high-level functionality might be\n",
     "provided --- whether it resides on the CPU or the motor controller.\n",
     "\n",
-    "Trajectory Following\n",
+    "Trajectory following\n",
     "--------------------\n",
     "\n",
     "Articulated robots are an example of a second order dynamic system, and\n",
@@ -153,7 +153,7 @@
     "(or to prefer to) implement these his/herself. These functions will be\n",
     "discussed below.\n",
     "\n",
-    "### Motion Queues (Motion Generation)\n",
+    "### Motion queues (motion generation)\n",
     "\n",
     "To improve the convenience for a robot application designer, and to\n",
     "avoid some of the risks of allowing execution of non-smooth\n",
@@ -202,7 +202,7 @@
     "space targets, and whether an existing queue may be interrupted. Some of\n",
     "these differences are discussed below.\n",
     "\n",
-    "### Interpolation Profiles\n",
+    "### Interpolation profiles\n",
     "\n",
     "Given the robot at rest and a target configuration, an *interpolation\n",
     "profile* is a continuous trajectory that satisfies certain operational\n",
@@ -343,7 +343,7 @@
     "incorporated as boundary conditions when solving for the form of the\n",
     "interpolation profile.\n",
     "\n",
-    "### Cartesian Commands\n",
+    "### Cartesian commands\n",
     "\n",
     "More sophisticated multi-axis motor controllers, such as those found in\n",
     "industrial robots, may mix joint-space and Cartesian commands\n",
@@ -456,7 +456,7 @@
     "([Fig. 6](#fig:StateMachine)). We shall revisit these diagrams later\n",
     "when we discuss [system integration](SystemIntegration.ipynb).\n",
     "\n",
-    "Feedforward Torque Control\n",
+    "Feedforward torque control\n",
     "--------------------------\n",
     "\n",
     "Although PID control is sometimes adequate for strong motors or\n",
@@ -538,7 +538,7 @@
     "difficulty of calibrating accurate inertial parameters of a robot.\n",
     "\n",
     "\n",
-    "Operational Space Control\n",
+    "Operational space control\n",
     "-------------------------\n",
     "\n",
     "It is often desired to control the end effector of an articulated robot\n",
@@ -559,7 +559,7 @@
     "the more typical $x = f(q)$ so as to not conflict with the $f(x,u)$\n",
     "notation used for a dynamic system.)\n",
     "\n",
-    "### Mathematical Derivation\n",
+    "### Mathematical derivation\n",
     "\n",
     "To get a sense for this approach, let us suppose that the robot's\n",
     "dynamics are first-order and velocity controlled. In other words, we\n",
@@ -637,7 +637,7 @@
     "these issues achieving stable operational control often requires a\n",
     "significant amount of tuning.\n",
     "\n",
-    "### Force and Impedance control\n",
+    "### Force and impedance control\n",
     "\n",
     "Using operational space control and a force sensor, it is possible to\n",
     "obtain a number of interesting behaviors, including Cartesian force\n",
@@ -707,10 +707,8 @@
     "zero-gravity mode sets $K$ and $D$ to 0 and the robot's end effector\n",
     "behaves like a free-floating mass in response to applied forces. To\n",
     "simulate MSD behavior on a robot's end effector, equation\n",
-    "([\\[eq:MassSpringDamper\\]](#eq:MassSpringDamper){reference-type=\"ref\"\n",
-    "reference=\"eq:MassSpringDamper\"}) can be used in conjunction with\n",
-    "([\\[eq:ForceSensor\\]](#eq:ForceSensor){reference-type=\"ref\"\n",
-    "reference=\"eq:ForceSensor\"}) to estimate $f_{ext}$, and the resulting\n",
+    "($\\ref{eq:MassSpringDamper}) can be used in conjunction with\n",
+    "($\\ref{eq:ForceSensor}$) to estimate $f_{ext}$, and the resulting\n",
     "$\\ddot{x}$ should be fed into an operational space controller as\n",
     "$\\ddot{x}_cmd$.\n",
     "\n",
